# FrequencyMan

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  FrequencyList.py  README.md  __init__.py  config.json  create_default_wf_lists.py  create_release.py  manifest.json  meta.json  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  run_pytest_benchmark.py  test.py
default_wf_lists/: af.txt  ar.txt  bg.txt  bn.txt  br.txt  bs.txt  ca.txt  cs.txt  da.txt  de.txt  el.txt  en.txt  eo.txt  es.txt  et.txt  eu.txt  fa.txt  fi.txt  fr.txt  gl.txt  he.txt  hi.txt  hr.txt  hu.txt  hy.txt  id.txt  ignore_candidates.txt  is.txt  it.txt  ja.txt  ka.txt  kk.txt  ko.txt  lt.txt  lv.txt  mk.txt  ml.txt  ms.txt  nb.txt  nl.txt  (+26 more)
frequencyman/: anki_morphs_mecab_wrapper.py  card_ranker.py  configured_target.py  default_wf_lists.py  language_data.py  problematic_score.py  reorder_logger.py  static_lang_data.py  target.py  target_cards.py  target_corpus_data.py  target_list.py  target_reorder_logger.py  text_processing.py  tokenizers.py  utilities.py  version.py  word_frequency_list.py
frequencyman/lib/: addon_config.py  cacher.py  db.py  event_logger.py  persistent_cacher.py  sql_db_file.py  utilities.py
frequencyman/ui/: main_window.py  overview_tab.py  reorder_cards_tab.py  select_new_target_window.py  sort_card_tab.py  sort_cards_tab.py  words_overview_filters.py  words_overview_tab.py  words_overview_tab_additional_columns.py  words_overview_tab_overview_options.py
scripts/: create_default_wf_lists.py  create_release.py  run_pytest_benchmark.py  test.py
tests/: __init__.py  test_addon_config.py  test_cacher.py  test_configured_target.py  test_event_logger.py  test_language_data.py  test_persistent_cacher.py  test_readme.py  test_select_new_target_window.py  test_target.py  test_target_cards.py  test_target_corpus_data.py  test_target_list.py  test_target_list_reorder.py  test_target_reorder_logger.py  test_text_processing.py  test_utilities.py  test_word_frequency_lists.py  tools.py
tests/data/collections/big_collection_es/: expected_order.txt  expected_order_0.txt  expected_order_1.txt  expected_order_TargetListReorder_reorder_cards_big_collection_es.txt  expected_order_TargetListReorder_reorder_cards_big_collection_es_with_reorder_scope.txt
tests/data/collections/big_collection_es/locked_orders/: TestTargetListReorder_test_reorder_cards_big_collection_es_sorted_cards_ids.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_with_reorder_scope_sorted_cards_ids.txt
tests/data/collections/big_collection_es/locked_results/: TestTargetListReorder_test_reorder_cards_big_collection_es_notes_focus_words.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_notes_lowest_familiarity_word_1.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_notes_lowest_familiarity_word_static_0.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_notes_lowest_familiarity_word_static_2.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_notes_lowest_fr_word_0.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_notes_lowest_fr_word_1.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_notes_main_focus_word_static_0.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_notes_main_focus_word_static_1.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_notes_seen_words.txt  TestTargetListReorder_test_reorder_cards_big_collection_es_notes_unseen_words.txt
tests/data/collections/empty_collection/: empty_collection.anki2
tests/data/collections/two_deck_collection/: expected_order.txt  expected_order_0.txt  expected_order_1.txt  expected_order_2.txt  expected_order_3.txt  expected_order_4.txt  expected_order_TargetListReorder_two_deck_collection.txt  expected_order_TargetListReorder_two_deck_collection_corpus_segmentation_by_note_field.txt  expected_order_TargetListReorder_two_deck_collection_no_reviewed_cards.txt  expected_order_TargetListReorder_two_deck_collection_with_reorder_scope.txt  two_deck_collection.anki2
tests/data/collections/two_deck_collection/locked_orders/: TestTargetListReorder_test_two_deck_collection_corpus_segmentation_by_note_field_sorted_cards_ids.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_familiarity.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_familiarity_sweetspot.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_ideal_focus_word_count.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_ideal_new_word_count.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_ideal_word_count.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_internal_word_frequency.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_lexical_underexposure.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_lowest_familiarity.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_lowest_fr_least_familiar_word.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_lowest_internal_word_frequency.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_lowest_word_frequency.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_most_obscure_word.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_new_words.txt  TestTargetListReorder_test_two_deck_collection_every_factor_all_cards_ids_proper_introduction.txt  TestTargetListReorder_test_two_deck_collection_sorted_cards_ids_0.txt  (+8 more)
tests/data/collections/two_deck_collection_low_fam/: two_deck_collection_low_fam.anki2
tests/data/collections/zh_and_ja/: zh_and_ja.anki2
tests/data/lang_data_test/lang_data/: names_to_ignore.txt
tests/ui/: common.py  test_main_window.py  test_reorder_cards_tab.py  test_words_overview_tab.py
user_files/frequency_lists/en/: en2.txt
user_files/frequency_lists/es/: es.txt
(+19 files in other folders)
