[project]
name = "FrequencyMan"
version = "0.0.1"
requires-python = ">=3.9"

[tool.autopep8]
max_line_length = 200

[tool.ruff]
line-length = 220

[tool.ruff.lint]
extend-select = ["PL", "E501"]
ignore = ["F401", "PLR6301", "PLR2004", "PLW0603", "E731", "F405", "PLC0415", "PLR2044", "PLR6104", "PLR6104", "PLR1730", "PLC0414", "PLC1901", "E713", "PLR5501", "E712"]

[tool.ruff.lint.pylint]
max-locals = 25
max-branches = 120
max-statements = 135
max-returns = 70

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode="strict"
include = ["frequencyman", "tests", "./__init__.py"]
exclude = ["releases", "user_files", "**/tokenizers/*/"]
reportMissingImports = true
reportMissingTypeStubs = true
reportUnusedImport = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnnecessaryIsInstance = false
reportMissingTypeArgument = false
reportImplicitStringConcatenation = true
reportImplicitOverride = true
reportWildcardImportFromLibrary = true

[tool.mypy]
disable_error_code = ["return", "return-value"]
python_version = "3.9"
mypy_path = ["."]
files = ["frequencyman", "tests"]
exclude = ["^releases/", "^user_files/"]
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
  "pytest.*",
  "_pytest.*",
  "anki.*",
]
ignore_missing_imports = true
follow_imports = "skip"


[tool.setuptools.packages.find]
where = ["."]
include = ["frequencyman", "tests"]
exclude = ["^releases/", "^user_files/"]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["py39", "py311", "py313"]

[tool.tox.env_run_base]
description = "Run tests with pytest"
runner = "uv-venv-runner"
set_env.PYTHONPATH = "{tox_root}"
passenv = ["USERNAME", "USER", "USERPROFILE", "HOME"]
skip_install = true
deps = [
    "-r requirements-dev.txt",
    "pytest-xdist>=3.0"
]
commands = [
    ["pytest", "tests", "-n", "auto", "--color=yes", "-vv", "{posargs}"]
]

