[project]
name = "FrequencyMan"
version = "0.0.1"
requires-python = ">=3.9"

[tool.autopep8]
max_line_length = 200

[tool.ruff]
line-length = 220

[tool.ruff.lint]
extend-select = [
    "PL",       # Category selector for all Pylint rules (prefix PL).
    "E501",     # Line too long - Checks for lines that exceed the configured line length.
    "PLW0108",  # Unnecessary lambda - Checks for lambda definitions that consist of a single function call.
    "B"         # Category selector for all flake8-bugbear rules (prefix B).
]
ignore = [
    "F401",      # Unused import - Module imported but unused.
    "PLR6301",   # No self use - Checks for the presence of unused `self` parameter in method definitions.
    "PLR2004",   # Magic value comparison - Checks for the use of unnamed numerical constants ("magic values") in comparisons.
    "PLW0603",   # Global statement - Checks for the use of `global` statements to update identifiers.
    "E731",      # Lambda assignment - Do not assign a lambda expression, use a def.
    "PLC0415",   # Import outside top level - `import` should be at the top-level of a module.
    "PLR2044",   # Empty comment - Checks for a # symbol appearing on a line not followed by an actual comment.
    "PLR6104",   # Non-augmented assignment - Checks for assignments that can be replaced by augmented assignments (like x = x + y -> x += y).
    "PLR1730",   # If stmt min max - Checks for `if` statements that can be replaced with `min()` or `max()`.
    "PLC0414",   # Useless import alias - Import alias does not rename original package.
    "PLC1901",   # Compare to empty string - Comparison to empty string can be simplified.
    "E713",      # Not in test - Test for membership should be 'not in'.
    "PLR5501",   # Collapsible else if - Checks for `else` blocks that consist of a single `if` statement.
    "E712",      # Comparison to true - Avoid equality comparisons to True; use the condition directly for truth checks.
    "B010",      # Set attr with constant - Do not call setattr with a constant attribute value. It is not any safer than normal property access.
    "B019",      # Cached instance method - Use of functools.lru_cache or functools.cache on methods can lead to memory leaks.
    "B009"       # Get attr with constant - Do not call getattr with a constant attribute value. It is not any safer than normal property access.
]

[tool.ruff.lint.pylint]
max-locals = 25
max-branches = 120
max-statements = 135
max-returns = 70

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode="strict"
include = ["frequencyman", "tests", "./__init__.py"]
exclude = ["releases", "user_files", "**/tokenizers/*/"]
reportMissingImports = true
reportMissingTypeStubs = true
reportUnusedImport = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnnecessaryIsInstance = false
reportMissingTypeArgument = false
reportImplicitStringConcatenation = true
reportImplicitOverride = true
reportWildcardImportFromLibrary = true

[tool.mypy]
disable_error_code = ["return", "return-value"]
python_version = "3.9"
mypy_path = ["."]
files = ["frequencyman", "tests"]
exclude = ["^releases/", "^user_files/"]
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
  "pytest.*",
  "_pytest.*",
  "anki.*",
]
ignore_missing_imports = true
follow_imports = "skip"


[tool.setuptools.packages.find]
where = ["."]
include = ["frequencyman", "tests"]
exclude = ["^releases/", "^user_files/"]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["py39", "py311", "py313"]

[tool.tox.env_run_base]
description = "Run tests with pytest"
runner = "uv-venv-runner"
set_env.PYTHONPATH = "{tox_root}"
passenv = ["USERNAME", "USER", "USERPROFILE", "HOME"]
skip_install = true
deps = [
    "-r requirements-dev.txt",
    "pytest-xdist>=3.0"
]
commands = [
    ["pytest", "tests", "-n", "auto", "--color=yes", "-vv", "{posargs}"]
]

